[fix] Notification behind info nav

--- a/master/qcheckserv/static/css/style.css
+++ b/master/qcheckserv/static/css/style.css
@@ -119,6 +119,7 @@ nav .menu a .tag {
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 100;
     color: var(--text-main);
     max-width: 350px;
 }
